--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.jpg" alt="">
+                    <img class="img-responsive img-circle" src="img/profile-cropped.jpg" alt=""/>
                     <div class="intro-text">
                         <span class="name">Amanda L. Brown</span>
                         <hr class="star-light">
@@ -291,7 +291,7 @@
                         <div class="modal-body">
                             <h2>Fortune Teller</h2>
                             <hr class="star-primary">
-                            <img src="img/fortuneteller.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/fortuneteller.JPG"class="img-responsive img-centered" alt=""/>
                             <p>One of the first projects I worked on, Fortune Teller is a simple console application created using C# to take user input and give them a fortune based on that input.</p>
                             <ul class="list-inline item-details">
                                 <li>Code:
@@ -328,7 +328,7 @@
                         <div class="modal-body">
                             <h2>Virtual Pet</h2>
                             <hr class="star-primary">
-                            <img src="img/virtualpet.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/virtualpet.JPG" class="img-responsive img-centered" alt=""/>
                             <p>Another console application, this one gives the user several options for taking care of a pet octopus where, based on the user's choice, updates the current status of the pet.</p>
                             <ul class="list-inline item-details">
                                 <li>Code:
@@ -365,7 +365,7 @@
                         <div class="modal-body">
                             <h2>Review Website</h2>
                             <hr class="star-primary">
-                            <img src="img/reviwesite.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/reviwesite.JPG"class="img-responsive img-centered" alt=""/>
                             <p>A website created to show what a technology review website would look like in the fictional world of Doctor Who.</p>
                             <ul class="list-inline item-details">
                                 <li>Code:
@@ -402,7 +402,8 @@
                         <div class="modal-body">
                             <h2>Wardrobe</h2>
                             <hr class="star-primary">
-                            <img src="img/wardrobe.jpg" class="img-responsive img-centered" alt="">
+
+                            <img src="img/wardrobe.JPG" class="img-responsive img-centered" alt=""/>
                             <p>A database-first MVC web application created to display the possible contents of a person's wardrobe. Users can add, view, and remove individual pieces based on the type.</p>
                             <ul class="list-inline item-details">
                                 <li>Code:
@@ -425,7 +426,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -498,7 +499,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
