--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                             <h2>Magic 8 Ball</h2>
                             <hr class="star-primary">
                             <img src="img/magic8ball.JPG" class="img-responsive img-centered" alt=""/>
-                            <p>A simple web application that displays answers to all your questions, if you had asked Grumpy Cat th</p>
+                            <p>A simple web application that displays answers to all your questions, if you had asked Grumpy Cat that is.</p>
                             <ul class="list-inline item-details">
                                 <li>Code:
                                     <strong><a href="http://github.com/abrown29/Magic8">Magic 8 Ball</a>
